{
  "db_name": "PostgreSQL",
  "query": "SELECT * FROM users WHERE id = $1",
  "describe": {
    "columns": [
      {
        "ordinal": 0,
        "name": "id",
        "type_info": "Int4"
      },
      {
        "ordinal": 1,
        "name": "email",
        "type_info": "Varchar"
      },
      {
        "ordinal": 2,
        "name": "firstname",
        "type_info": "Varchar"
      },
      {
        "ordinal": 3,
        "name": "lastname",
        "type_info": "Varchar"
      },
      {
        "ordinal": 4,
        "name": "password",
        "type_info": "Varchar"
      },
      {
        "ordinal": 5,
        "name": "balance",
        "type_info": "Int8"
      },
      {
        "ordinal": 6,
        "name": "created_at",
        "type_info": "Timestamp"
      },
      {
        "ordinal": 7,
        "name": "updated_at",
        "type_info": "Timestamp"
      }
    ],
    "parameters": {
      "Left": [
        "Int4"
      ]
    },
    "nullable": [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false
    ]
  },
  "hash": "843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3"
}
